Fixes logo spacing in footer on mobile

--- a/wp-content/themes/specular/style.css
+++ b/wp-content/themes/specular/style.css
@@ -66,7 +66,11 @@ body {
   background-repeat:no-repeat;
 }
 
-/* our-methodologies page */
+@media screen and (max-width: 700px) {
+  .footer-logo{
+    margin-top:2em;
+  }
+}
 
 
 /*-----------------------------------------------------------------------------------
